# animals_system_hw23

./: main.py  pyproject.toml
app/data/: action_animals.py  action_reviews.py  animals.json  cured_animal.json  list_files.py  open_files.py  reviews.json
app/forms/: animals.py  reviews.py
app/keyboards/: animals.py  global_menu.py
app/log/: log.py
app/routers/: animals.py  reviews.py  start.py
